--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,7 +91,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    <a href="http://www.miitbeian.gov.cn" target="_blank">蜀ICP备16033362号</a> Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
                     <br>
                     Theme on <a href="{{ site.github_repo }}">GitHub</a> |
                     <iframe
